# galea-tutorial

./: CMakeLists.txt  README.md  build.sh  compile.sh  compile_shaders.bat  compile_shaders.sh
src/: app.cpp  app.hpp  buffer.cpp  buffer.hpp  camera.cpp  camera.hpp  device.cpp  device.hpp  frame_info.hpp  game_object.cpp  game_object.hpp  keyboard_movement_controller.cpp  keyboard_movement_controller.hpp  logger.cpp  logger.hpp  main.cpp  model.cpp  model.hpp  pipeline.cpp  pipeline.hpp  renderer.cpp  renderer.hpp  simple_render_system.cpp  simple_render_system.hpp  swap_chain.cpp  swap_chain.hpp  utils.hpp  window.cpp  window.hpp
src/core/: app.cpp  app.hpp  camera.cpp  camera.hpp  device.cpp  device.hpp  event_emitter.hpp  game_object.hpp  input.cpp  input.hpp  keyboard_movement_controller.cpp  keyboard_movement_controller.hpp  model.cpp  model.hpp  pipeline.cpp  pipeline.hpp  renderer.cpp  renderer.hpp  simple_render_system.cpp  simple_render_system.hpp  swap_chain.cpp  swap_chain.hpp  window.cpp  window.hpp
src/galea/: app.cpp  app.hpp  keyboard_movement_controller.cpp  keyboard_movement_controller.hpp  pipeline.cpp  simple_render_system.cpp  swap_chain.cpp  window.cpp  window.hpp
src/input/: input.cpp  input.hpp
src/shaders/: simple_shader.frag
src/utils/: event_emitter.hpp
